--- a/vi.html
+++ b/vi.html
@@ -339,7 +339,7 @@
                     <div class="tab-content mt-5" id="tradingTabContent">
                         <div class="tab-pane fade show active" id="trading-wrapunwrap" role="tabpanel" aria-labelledby="trading-wrapunwrap-tab">
                             <a href="javascript:void(0)" id="play-video-one" class="video1">
-                                <img class="w-100" src="assets/images/dex-video-tutorials-trading.png" alt="">
+                                <img class="w-100" src="assets/images/spill the t-1.png" alt="">
                             </a>
                             <div class="vidBox1">
                                 <div class="videoCont">
@@ -349,7 +349,7 @@
                         </div>
                         <div class="tab-pane fade" id="trading-spot" role="tabpanel" aria-labelledby="trading-spot-tab">
                             <a href="javascript:void(0)" id="play-video-two" class="video2">
-                                <img class="w-100" src="assets/images/dex-video-tutorials-trading.png" alt="">
+                                <img class="w-100" src="assets/images/spill the t-2.png" alt="">
                             </a>
                             <div class="vidBox2">
                                 <div class="videoCont">
@@ -359,7 +359,7 @@
                         </div>
                         <div class="tab-pane fade" id="trading-borrowing" role="tabpanel" aria-labelledby="trading-borrowing-tab">
                             <a href="javascript:void(0)" id="play-video-three" class="video3">
-                                <img class="w-100" src="assets/images/dex-video-tutorials-trading.png" alt="">
+                                <img class="w-100" src="assets/images/spill the t-3.png" alt="">
                             </a>
                             <div class="vidBox3">
                                 <div class="videoCont">
@@ -369,7 +369,7 @@
                         </div>
                         <div class="tab-pane fade" id="trading-lending" role="tabpanel" aria-labelledby="trading-lending-tab">
                             <a href="javascript:void(0)" id="play-video-four" class="video4">
-                                <img class="w-100" src="assets/images/dex-video-tutorials-trading.png" alt="">
+                                <img class="w-100" src="assets/images/spill the t-4.png" alt="">
                             </a>
                             <div class="vidBox4">
                                 <div class="videoCont">
