--- a/vi.html
+++ b/vi.html
@@ -113,6 +113,11 @@
                     <div class="banner-top">
                         <div class="variable slider">
                             <div>
+                                <a href="https://forum.tomochain.com/t/trivia-quiz-th-thach-hi-u-bi-t-v-tomodex-lending/316" target="_blank" rel="noopener noreferrer">
+                                    <img src="assets/images/TriviaQuiz-01-01-01.jpg">
+                                </a>
+                            </div>
+                            <div>
                                 <a href="https://medium.com/tomochain/tomochain-tomo-loan-available-on-tomodex-p2p-lending-market-4f71dcebd4f5" target="_blank" rel="noopener noreferrer">
                                     <img src="assets/images/TomoChain (TOMO) Loan Available on TomoDEX P2P Lending Market.jpg">
                                 </a>
