footer add coin Gecko

--- a/index.html
+++ b/index.html
@@ -534,6 +534,9 @@
                             <li class="social-item">
                                 <a href="https://github.com/tomochain" target="_blank" title="github"><i class="fab fa-github"></i></a>
                             </li>
+                            <li class="social-item">
+                                <a href="https://www.coingecko.com/en/exchanges/tomodex" target="_blank" title="github"><img width="22px" src="assets/images/CoinGecko Logo.png" alt="CoinGecko"></a>
+                            </li>
                         </ul>
                     </div>
                     <div class="col-lg-1"></div>
