--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
             <div class="row align-items-center">
                 <div class="col-lg-7">
                     <div class="site-heading">
-                        <h1>Instant Exchange<br>
+                        <h1>Trade. Borrow. Earn<br>
                             Directly From Your Wallet</h1>
-                        <div class="subheading mt-3">100% secured Peer to Peer trading - powered by TomoChain technologies</div>
+                        <div class="subheading mt-3">Decentralized Finance - Powered by TomoChain Technologies</div>
                         <div class="box-btn mt-5">
                             <a class="btn btn-primary d-flex d-md-inline-flex align-items-center justify-content-center"
                                 href="/trade/"><i class="dex-multiline_chart"></i> Start Trading</a>
