--- a/vi.html
+++ b/vi.html
@@ -97,9 +97,9 @@
             <div class="row align-items-center">
                 <div class="col-lg-7">
                     <div class="site-heading">
-                        <h1>Giao dịch tức thời<br>
-                            trực tiếp từ ví của bạn</h1>
-                        <div class="subheading mt-3">Giao dịch ngang hàng 100% bảo mật - cung cấp bởi TomoChain</div>
+                        <h1>Mua bán. Vay & Cho Vay<br>
+                            Giao dịch trực tiếp từ ví của bạn</h1>
+                        <div class="subheading mt-3">Nền tảng tài chính phi tập trung trên nền tảng TomoChain</div>
                         <div class="box-btn mt-5">
                             <a class="btn btn-primary d-flex d-md-inline-flex align-items-center justify-content-center"
                                 href="/trade/"><i class="dex-multiline_chart"></i> Bắt đầu giao dịch</a>
