--- a/vi.html
+++ b/vi.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="TomoDEX là sàn giao dịch phi tập trung đầu tiên dựa trên TomoX. TomoDEX mang đến hệ sinh thái tài chính phi tập trung của riêng bạn trên nền tảng công nghệ TomoChain">
+    <meta name="author" content="TomoChain">
     <title>TomoDEX | Decentralized Exchange</title>
 
     <!-- META FOR FACEBOOK -->
@@ -14,13 +14,13 @@
     <meta property="og:url" itemprop="url" content="https://dex.devnet.tomochain.com/"/>
     <meta property="og:image" itemprop="thumbnailUrl" content="https://raw.githubusercontent.com/tomochain/tomox-sdk-ui/master/public/share-society.png"/>
     <meta content="TomoDEX | Decentralized Exchange" itemprop="headline" property="og:title"/>
-    <meta content="TomoDEX is the first DEX on TomoChain, using TomoX protocol. The company that operates TomoDEX exchange is the TomoChain team. On this exchange people can trade: buy or sell their tokens." itemprop="description" property="og:description"/>
+    <meta content="TomoDEX là sàn giao dịch phi tập trung đầu tiên dựa trên TomoX. TomoDEX mang đến hệ sinh thái tài chính phi tập trung của riêng bạn trên nền tảng công nghệ TomoChain" itemprop="description" property="og:description"/>
     <!-- END META FOR FACEBOOK -->
     <!-- Twitter Card -->
     <meta name="twitter:card" value="summary_large_image">
     <meta name="twitter:url" content="https://dex.devnet.tomochain.com/">
     <meta name="twitter:title" content="TomoDEX | Decentralized Exchange">
-    <meta name="twitter:description" content="TomoDEX is the first DEX on TomoChain, using TomoX protocol. The company that operates TomoDEX exchange is the TomoChain team. On this exchange people can trade: buy or sell their tokens.">
+    <meta name="twitter:description" content="TomoDEX là sàn giao dịch phi tập trung đầu tiên dựa trên TomoX. TomoDEX mang đến hệ sinh thái tài chính phi tập trung của riêng bạn trên nền tảng công nghệ TomoChain">
     <meta name="twitter:image" content="https://raw.githubusercontent.com/tomochain/tomox-sdk-ui/master/public/share-society.png"/>
     <meta name="twitter:site" content="@TomoChainANN">
     <meta name="twitter:creator" content="@TomoChainANN">
@@ -350,7 +350,7 @@
                         <div class="col-2 col-md-4 col-lg-3 d-flex justify-content-center justify-content-lg-start"><img src="assets/images/dex-icon-right.svg" alt="dex-icon-right"></div>
                         <div class="col-5 col-md-4">
                             <p class="mb-4 size-image-trading"><img src="assets/images/dex-trade.svg" alt="dex-trade"></p>
-                            <p class="font-weight-bold">Giao dịch</p>
+                            <p class="font-weight-bold">Mua bán. Vay & Cho Vay</p>
                         </div>
                     </div>
                     <div class="trading-preview">
