update meta keywords

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="TomoDEX is the first DEX on TomoChain, using TomoX protocol, operated by TomoChain team. 100% secured Peer to Peer trading - powered by TomoChain technologies">
+    <meta name="keywords" content="Decentralized Exchange, TomoChain, DEX, Blockchain Crypto Exchange, Cryptocurrency Exchange" />
     <meta name="author" content="TomoChain">
     <title>TomoDEX | Decentralized Exchange</title>
 
