--- a/vi.html
+++ b/vi.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="TomoDEX là sàn giao dịch phi tập trung đầu tiên dựa trên TomoX. TomoDEX mang đến hệ sinh thái tài chính phi tập trung của riêng bạn trên nền tảng công nghệ TomoChain">
+    <meta name="keywords" content="Decentralized Exchange, TomoChain, DEX, Blockchain Crypto Exchange, Cryptocurrency Exchange" />
     <meta name="author" content="TomoChain">
     <title>TomoDEX | Decentralized Exchange</title>
 
