--- a/vi.html
+++ b/vi.html
@@ -572,7 +572,10 @@
                                 <a href="https://github.com/tomochain" target="_blank" title="github"><i class="fab fa-github"></i></a>
                             </li>
                             <li class="social-item">
-                                <a href="https://www.coingecko.com/en/exchanges/tomodex" target="_blank" title="github"><img width="22px" src="assets/images/CoinGecko Logo.png" alt="CoinGecko"></a>
+                                <a href="https://www.coingecko.com/en/exchanges/tomodex" target="_blank" title="CoinGecko"><img width="22px" src="assets/images/CoinGecko Logo.png" alt="CoinGecko"></a>
+                            </li>
+                            <li class="social-item">
+                                <a href="https://coinmarketcap.com/exchanges/tomodex/" target="_blank" title="coinmarketcap"><img width="22px" src="assets/images/coinmarketcap-logo.png" alt="Coinmarketcap"></a>
                             </li>
                         </ul>
                     </div>
