--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link btn-signup" href="/create/">Sign up</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link btn-login" href="https://dex.tomochain.com/unlock">Login</a>
+                        <a class="nav-link btn-login" href="https://dex.tomochain.com/unlock">Connect Wallet</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
