--- a/vi.html
+++ b/vi.html
@@ -68,11 +68,11 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link btn-signup" href="/create/">Đăng ký</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link btn-login" href="https://dex.tomochain.com/unlock">Đăng Nhập</a>
+                        <a class="nav-link btn-login" href="https://dex.tomochain.com/unlock">Kết nối Ví</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
