add video Deposit/Withdraw

--- a/vi.html
+++ b/vi.html
@@ -487,11 +487,11 @@
                     <div class="tab-content mt-5" id="tradingTabContent">
                         <div class="tab-pane fade show active" id="trading-wrapunwrap" role="tabpanel" aria-labelledby="trading-wrapunwrap-tab">
                             <a href="javascript:void(0)" id="play-video-one" class="video1">
-                                <img class="w-100" src="assets/images/spill the t-1.png" alt="">
+                                <img class="w-100" src="assets/images/deposit-withdraw.jpg" alt="">
                             </a>
                             <div class="vidBox1">
                                 <div class="videoCont">
-                                    <iframe id="video-one" class="player v1" src="https://www.youtube.com/embed/LtEUlP9-Apw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <iframe id="video-one" class="player v1" src="https://www.youtube.com/embed/3uIXA1ULQFE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
                             </div>
                         </div>
@@ -528,7 +528,7 @@
                     </div>
                     <ul class="nav justify-content-center p-3" id="tradingTab" role="tablist">
                         <li class="nav-item">
-                            <a class="px-3 cursor-pointer active" id="trading-wrapunwrap-tab" data-toggle="tab" href="#trading-wrapunwrap" role="tab" aria-controls="trading-wrapunwrap" aria-selected="false">Wrap/Unwrap</a>
+                            <a class="px-3 cursor-pointer active" id="trading-wrapunwrap-tab" data-toggle="tab" href="#trading-wrapunwrap" role="tab" aria-controls="trading-wrapunwrap" aria-selected="false">Deposit/Withdraw</a>
                         </li>
                         <li class="nav-item">
                             <a class="px-3 cursor-pointer" id="trading-spot-tab" data-toggle="tab" href="#trading-spot" role="tab" aria-controls="trading-spot" aria-selected="true">Spot Trading</a>
