--- a/index.html
+++ b/index.html
@@ -482,8 +482,7 @@
                         </div>
                     </div>
                     <div class="trading-preview">
-                        <h3 class="tmp-title-large">No Deposit. No Withdrawal. No Risk.</h3>
-                        <p class="opacity-60">Maintain complete custody of your tokens by trading directly from your own wallet</p>
+                        <p class="font-weight-bold">Maintain complete custody of your tokens by trading directly from your own wallet</p>
                     </div>
                 </div>
                 <div id="watch-videos" class="col-lg-6">
