--- a/vi.html
+++ b/vi.html
@@ -482,8 +482,7 @@
                         </div>
                     </div>
                     <div class="trading-preview">
-                        <h3 class="tmp-title-large">Không ký gửi. Không rút. Không rủi ro</h3>
-                        <p class="opacity-60">Duy trì quyền giám sát token của bạn bằng cách giao dịch trực tiếp từ địa chỉ ví</p>
+                        <p class="font-weight-bold">Duy trì quyền giám sát token của bạn bằng cách giao dịch trực tiếp từ địa chỉ ví</p>
                     </div>
                 </div>
                 <div id="watch-videos" class="col-lg-6">
