update font size

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                     <div class="common-preview">
                         <h2 class="common-title">How to start</h2>
                     </div>
-                    <div class="row my-5 py-2 text-center text-lg-left">
+                    <div class="row mt-5 mb-2 py-2 text-center text-lg-left">
                         <div class="col-5 col-md-4">
                             <p class="mb-4 size-image-trading"><img src="assets/images/dex-connect-wallet.svg" alt="dex-connect-wallet"></p>
                             <p class="font-weight-bold">Connect Wallet</p>
@@ -482,7 +482,7 @@
                         </div>
                     </div>
                     <div class="trading-preview">
-                        <p class="font-weight-bold">Maintain complete custody of your tokens by trading directly from your own wallet</p>
+                        <h3 class="tmp-title-large">Maintain complete custody of your tokens by trading directly from your own wallet</h3>
                     </div>
                 </div>
                 <div id="watch-videos" class="col-lg-6">
