--- a/vi.html
+++ b/vi.html
@@ -470,7 +470,7 @@
                     <div class="common-preview">
                         <h2 class="common-title">Làm thế nào để bắt đầu giao dịch?</h2>
                     </div>
-                    <div class="row my-5 py-2 text-center text-lg-left">
+                    <div class="row mt-5 mb-2 py-2 text-center text-lg-left">
                         <div class="col-5 col-md-4">
                             <p class="mb-4 size-image-trading"><img src="assets/images/dex-connect-wallet.svg" alt="dex-connect-wallet"></p>
                             <p class="font-weight-bold">Kết nối ví</p>
@@ -482,7 +482,7 @@
                         </div>
                     </div>
                     <div class="trading-preview">
-                        <p class="font-weight-bold">Duy trì quyền giám sát token của bạn bằng cách giao dịch trực tiếp từ địa chỉ ví</p>
+                        <h3 class="tmp-title-large">Duy trì quyền giám sát token của bạn bằng cách giao dịch trực tiếp từ địa chỉ ví</h3>
                     </div>
                 </div>
                 <div id="watch-videos" class="col-lg-6">
