--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
                                                 <a href="https://docs.tomochain.com/tomodex/tomodex-fee" target="_blank">Fee Structure</a>
                                             </li>
                                             <li class="menu-item">
-                                                <a href="https://forms.gle/cU1XU3b8EUMxB6yA6" target="_blank">Submit a Request</a>
+                                                <a href="https://forms.gle/cU1XU3b8EUMxB6yA6" target="_blank">Open a Support Ticket</a>
                                             </li>
                                             <li class="menu-item">
                                                 <a href="https://forms.gle/ZfSGFSq2SqJ9a4UG6" target="_blank">Token Listing Application</a>
